# projects

./: README.md
CircularBuffer/: CMakeLists.txt
CircularBuffer/lib/: StaticBuffer.hpp
CircularBuffer/tests/: test.cpp
Lab1/: main.puml
Lab1/Models/: CrashResult.cs  Path.cs  ShipReport.cs
Lab1/Services/: ITravelRunner.cs
Lab2/Entities/: Computer.cs
Lab2/Exceptions/: Result.cs
Lab2/Models/: ChipSet.cs  MotherBoardFormFactor.cs  Sockets.cs  Specification.cs  WifiStandards.cs  XmpType.cs
Lab2/Services/: ComponentsFactory.cs  ComputerConfigurator.cs  IComponentFactory.cs  SpecificComponentFactory.cs
Lab3/: Lab3.csproj
Lab3/Entities/: IMessenger.cs
Lab3/Services/: RecipientLogger.cs  Uid.cs
Lab5/: Program.cs
Lab5/Console/: Console.csproj
Lab5/Lab5/: Program.cs
LabTests/Lab1.Tests/: Lab1.Tests.csproj
LabTests/Lab2.Tests/: ComputerTests.cs
LabTests/Lab3.Tests/: MessageDistributionTest.cs
LabTests/Lab4.Tests/: FileSystemTests.cs
PoolAllocator/lib/: CMakeLists.txt
archiver/: main.cpp
archiver/lib/: arc.cpp
c#/Lab1/: Lab1.csproj
c#/Lab2/: Program.cs
c#/Lab3/: Program.cs
c#/Lab4/: Program.cs
c++/labwork-1-phantasior/: CMakeLists.txt  README.md
c++/labwork-10-phantasior/: CMakeLists.txt
c++/labwork-10-phantasior/lib/: CMakeLists.txt  weather_formatter.hpp
c++/labwork-2-phantasior/: .gitignore  CMakeLists.txt
c++/labwork-7-phantasior/: main.cpp
database/: CMakeLists.txt
database/lib/: MySQL.h
labwork-1-phantasior/: .gitignore  main.cpp
labwork-10-phantasior/: README.md  config.json
labwork-10-phantasior/lib/: app.cpp  app.hpp  weather_formatter.cpp
labwork-11-phantasior/: CMakeLists.txt
labwork-11-phantasior/lib/: CMakeLists.txt  algo.hpp
labwork-11-phantasior/tests/: test.cpp
labwork-12-phantasior/lib/: CMakeLists.txt
labwork-2-phantasior/lib/: CMakeLists.txt  consts.cpp  consts.h  number.cpp  number.h  utils.cpp  utils.h
labwork-3-phantasior/: .gitignore  CMakeLists.txt  README.md  app.cpp
labwork-3-phantasior/lib/: CMakeLists.txt  bmp.h  parser.h  sandpile.cpp  sandpile.h
labwork-3-phantasior/utils/: CMakeLists.txt  utils.cpp
labwork-4-phantasior/: .gitignore  CmakeLists.txt
labwork-4-phantasior/lib/: arc.h  hamming.h  utils.cpp  utils.h
labwork-5-phantasior/: CMakeLists.txt
labwork-5-phantasior/lib/: ArgParser.h  Argument.cpp  Argument.h  CMakeLists.txt  utils.cpp  utils.h
labwork-5-phantasior/tests/: CMakeLists.txt  argparser_test.cpp
labwork-6-phantasior/: CMakeLists.txt
labwork-6-phantasior/lib/: parser.h
labwork-6-phantasior/tests/: test_format.cpp  test_parser.cpp
labwork-7-phantasior/: .gitignore  CMakeLists.txt
labwork-7-phantasior/lib/: CMakeLists.txt  parser.cpp  parser.hpp
labwork-8-phantasior/lib/: CMakeLists.txt  DynamicBuffer.hpp
labwork-8-phantasior/tests/: test.cpp  (+1 more)
labwork-9-phantasior/: CMakeLists.txt
labwork-9-phantasior/lib/: CMakeLists.txt  allocator.cpp  allocator.hpp  pool.hpp
ntr/: array.cpp  datarace.cpp  list.cpp  main  main.cpp  server.cpp  tokens.cpp
(+243 files in other folders)
